add images and update index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,68 @@
     <title>Project: Landing Page</title>
 </head>
 <body>
+    <!-- start header -->
+    <div class="header">
+        <h1 class="logo">Header Logo</h1>
+        <nav>
+            <a href="#">Header link one</a>
+            <a href="#">Header link two</a>
+            <a href="#">Header link three</a>
+        </nav>
+    </div>
+    <!-- end header -->
     
+    <!-- start hero -->
+    <div class="hero">
+        <h2 class="hero-title">This website is awesome</h2>
+        <p class="hero-subtitle">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button class="hero-button">Sign Up</button>
+        <img class="hero-image" src="/images/hero-image.webp" alt="this is a placeholder for an image">
+    </div>
+    <!-- end hero -->
+
+
+    <!-- start info -->
+    <div class="info">
+        <h2 class="info-title">Some random information</h2>
+        <div class="info-galeri">
+            <div class="info-galeri-section">
+                <img src="/images/placeholder-info.jpg" alt="">
+                <p class="info-subtitle">This is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-galeri-section">
+                <img src="/images/placeholder-info.jpg" alt="">
+                <p class="info-subtitle">This is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-galeri-section">
+                <img src="/images/placeholder-info.jpg" alt="">
+                <p class="info-subtitle">This is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-galeri-section">
+                <img src="/images/placeholder-info.jpg" alt="">
+                <p class="info-subtitle">This is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+    <!-- end info -->
+
+    <!-- start quote -->
+    <div class="quote">
+        <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actially read it. Who knows? All I know is that it looks nice.</p>
+        <p class="quote-author">-Thor, God of thunder</p>
+    </div>
+    <!-- end quote -->
+
+    <!-- start call to action -->
+     <div class="call-to-action">
+        <div class="cot-text">
+            <h2>Call to action! It's time!</h2>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button class="cot-button">Sign up</button>
+     </div>
+    <!-- end call to action -->
+
+
 </body>
 </html>
